[package]
name = "gorillas-rs"
version = "0.1.0"
authors = ["nodef0 <d2isgreat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = { version = "0.3.16", default-features = false, features = ["collisions", "fonts"] }
rand = { version = "0.7.0", features = ["stdweb"] }
