[package]
name = "gorillas-rs"
version = "0.1.0"
authors = ["nodef0 <d2isgreat@gmail.com>"]
edition = "2018"

[dependencies]
quicksilver = { version = "0.3.18", default-features = false, features = ["collisions", "fonts"] }
rand = { version = "0.7.0", features = ["stdweb"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
flate2 = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.12"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

